@@ -176,15 +176,9 @@ public class Extensions {
         return e;
     }
     
-    /** A map from token name to the extension class that implements the token */
-//    static protected Map<String,Class<? extends JmlExtension>> extensionClasses = new HashMap<>();
-//    protected Map<String,JmlExtension> extensionInstances = new HashMap<>();
-
     static public Map<String,JmlExtension.ClassLike> classLike = new HashMap<>();
-    static public Map<String,IJmlClauseKind> typeMethodClauses = new HashMap<>();
-    static public Map<String,IJmlClauseKind> statementMethodClauses = new HashMap<>();
-    //static public Map<String,IJmlClauseKind> lineAnnotations = new HashMap<>();
-    //static public Map<String,IJmlClauseKind> expressionKinds = new HashMap<>();
+//    static public Map<String,IJmlClauseKind> typeMethodClauses = new HashMap<>();
+//    static public Map<String,IJmlClauseKind> statementMethodClauses = new HashMap<>();
     static public Map<String,IJmlClauseKind> allKinds = new HashMap<>();
 
     static protected Map<String,Class<? extends FieldExtension>> fieldClasses = new HashMap<>();
@@ -192,7 +186,7 @@ public class Extensions {
     protected Map<String,FieldExtension> fieldInstances = new HashMap<>();
     
     // This static method runs through all the extension classes and adds
-    // appropriate information to the HashMap above, so extensions can be 
+    // appropriate information to the HashMaps above, so extensions can be 
     // looked up at runtime. The extension classes include the predefined
     // package org.jmlspecs.openjml.ext and any classes or packages given in the
     // extensions option.
@@ -239,56 +233,13 @@ public class Extensions {
     }
     
     private static final int mods = Flags.PUBLIC | Flags.STATIC | Flags.FINAL;
-    public static boolean registerClass(Context context, Class<?> cc) {
-        // Options self-register when constructor is called
-//        if (JmlExtension.class.isAssignableFrom(cc)) {
-//            for (Field f: cc.getDeclaredFields()) {
-//                if (JmlOption.class.isAssignableFrom(f.getType())) {
-//                    //if ((f.getModifiers() & mods) == mods)
-//                    
-//                }
-//            }
-//        }
-//        int mask = Flags.FINAL|Flags.STATIC|Flags.PUBLIC;
-//        for (Field f: cc.getDeclaredFields()) {
-//            int mods = f.getModifiers();
-//            // Look for final static public fields with type IJmlClauseKind
-//            if ((mods & mask) != mask) continue;
-//            if (IJmlClauseKind.class.isAssignableFrom(f.getType())) {
-//                try {
-//                    IJmlClauseKind kind = (IJmlClauseKind)f.get(null);
-//                    if (kind != null) allKinds.put(kind.name(), kind);
-////                    if (kind instanceof IJmlClauseKind.ExpressionKind) expressionKinds.put(kind.name(), kind);
-//                } catch (IllegalAccessException e) {
-//                    // Error - this should nnever happen
-//                }
-//            }
-//        }
-        if (ExpressionExtension.class.isAssignableFrom(cc)) {
-//            @SuppressWarnings("unchecked")
-//            Class<ExpressionExtension> c = (Class<ExpressionExtension>)cc;
-//            JmlTokenKind[] tokens;
-//            try {
-//                Method m = c.getMethod("tokens");
-//                tokens = (JmlTokenKind[])m.invoke(null);
-//                if (tokens != null) for (JmlTokenKind t: tokens) {
-//                    extensionClasses.put(t.internedName(), c);
-//                    //clauseTypes.put(t.name(), t);
-//                }
-//                m = c.getMethod("clauseTypes");
-//                if (m != null) {
-//                    IJmlClauseKind[] kinds = (IJmlClauseKind[])m.invoke(null);
-//                    if (kinds != null) for (IJmlClauseKind t: kinds) {
-//                        expressionKinds.put(t.name(), t);
-//                    }
-//                }
-//            } catch (Exception e) {
-//                return false;
-//            }
-            return true;
-        } else if (FieldExtension.class.isAssignableFrom(cc)) {
+    public static boolean registerClass(Context context, Class<?> cce) {
+        if (!JmlExtension.class.isAssignableFrom(cce)) return false; // Extension classes must inherit from JmlExtensionn
+        @SuppressWarnings("unchecked")
+        Class<? extends JmlExtension> cc = (Class<? extends JmlExtension>)cce;
+        if (FieldExtension.class.isAssignableFrom(cce)) {
             @SuppressWarnings("unchecked")
-            Class<? extends FieldExtension> c = (Class<? extends FieldExtension>)cc;
+            Class<? extends FieldExtension> c = (Class<? extends FieldExtension>)cce;
             try {
                 Method m = c.getMethod("ids");
                 String[] ids = (String[])m.invoke(null);
@@ -298,64 +249,14 @@ public class Extensions {
             } catch (Exception e) {
                 return false;
             }
-            return true;
-        } else if (JmlExtension.MethodClause.class.isAssignableFrom(cc)) {
-            @SuppressWarnings("unchecked")
-            Class<JmlExtension.MethodClause> c = (Class<JmlExtension.MethodClause>)cc;
+        }
+        {
             try {
-                Constructor<MethodClause> cct = c.getConstructor();
-                MethodClause occ = cct.newInstance();
-                occ.register(context);
+                cc.getConstructor().newInstance().register(context);
             } catch (Exception e) {
                 return false;
             }
             return true;
-        } else if (JmlExtension.TypeClause.class.isAssignableFrom(cc)) {
-            @SuppressWarnings("unchecked")
-            Class<JmlExtension.TypeClause> c = (Class<JmlExtension.TypeClause>)cc;
-            try {
-                Constructor<JmlExtension.TypeClause> cct = c.getConstructor();
-                JmlExtension.TypeClause occ = cct.newInstance();
-                occ.register(context);
-            } catch (Exception e) {
-                return false;
-            }
-            return true;
-        } else if (JmlExtension.LineAnnotation.class.isAssignableFrom(cc)) {
-            @SuppressWarnings("unchecked")
-            Class<JmlExtension.LineAnnotation> c = (Class<JmlExtension.LineAnnotation>)cc;
-            try {
-                Constructor<JmlExtension.LineAnnotation> cct = c.getConstructor();
-                JmlExtension.LineAnnotation occ = cct.newInstance();
-                occ.register(context);
-            } catch (Exception e) {
-                return false;
-            }
-            return true;
-        } else if (JmlExtension.Statement.class.isAssignableFrom(cc)) {
-            @SuppressWarnings("unchecked")
-            Class<JmlExtension.Statement> c = (Class<JmlExtension.Statement>)cc;
-            try {
-                Constructor<JmlExtension.Statement> cct = c.getConstructor();
-                JmlExtension.Statement occ = cct.newInstance();
-                occ.register(context);
-            } catch (Exception e) {
-                return false;
-            }
-            return true;
-        } else if (JmlExtension.ClassLike.class.isAssignableFrom(cc)) {
-            @SuppressWarnings("unchecked")
-            Class<JmlExtension.ClassLike> c = (Class<JmlExtension.ClassLike>)cc;
-            try {
-                Constructor<JmlExtension.ClassLike> cct = c.getConstructor();
-                JmlExtension.ClassLike occ = cct.newInstance();
-                occ.register(context);
-            } catch (Exception e) {
-                return false;
-            }
-            return true;
-        } else {
-            return false;
         }
     }
     
